--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -614,6 +614,9 @@ S\'ha rebut un missatge d\'intercanvi de claus per a una versió del protocol no
   <string name="WebRtcCallScreen_new_safety_numbers">El número de seguretat de la conversa amb %1$s ha canviat. Això pot significar o bé que algú està provant d\'interceptar la comunicació, o bé que %2$s ha reinstal·lat el Signal.</string>
   <string name="WebRtcCallScreen_you_may_wish_to_verify_this_contact">Potser voleu verificar el número de seguretat amb aquest contacte.</string>
   <string name="WebRtcCallScreen_new_safety_number_title">Número de seguretat nou</string>
+  <string name="WebRtcCallScreen_accept">Accepta</string>
+  <string name="WebRtcCallScreen_cancel">Cancel·la</string>
+  <string name="WebRtcCallScreen_end_call">Finalitza la trucada</string>
   <!--WebRtcCallControls-->
   <string name="WebRtcCallControls_tap_to_enable_your_video">Toqueu per activar el vídeo</string>
   <!--attachment_type_selector-->
@@ -763,7 +766,7 @@ S\'ha rebut un missatge d\'intercanvi de claus per a una versió del protocol no
   <string name="database_migration_activity__the_default_system_database_will_not_be_modified">La base de dades predeterminada del sistema no es modificarà ni  s\'alterarà de cap manera.</string>
   <string name="database_migration_activity__skip">Omet</string>
   <string name="database_migration_activity__import">Importa</string>
-  <string name="database_migration_activity__this_could_take_a_moment_please_be_patient">Això pot trigar una mica. Tingueu paciència, us notificarem quan la importació hagi acabat.</string>
+  <string name="database_migration_activity__this_could_take_a_moment_please_be_patient">Això pot trigar una mica. Tingueu paciència, us notificarem quan la importació hagi finalitzat.</string>
   <string name="database_migration_activity__importing">S\'ESTÀ IMPORTANT</string>
   <!--database_upgrade_activity-->
   <string name="database_upgrade_activity__updating_database">S\'està actualitzant la base de dades...</string>
@@ -796,7 +799,7 @@ S\'ha rebut un missatge d\'intercanvi de claus per a una versió del protocol no
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Per enviar fitxers i missatges als grups, premeu «D\'acord» i completeu la configuració sol·licitada. Podeu trobar la configuració dels MMS del vostre operador telefònic si cerqueu «l\'APN del vostre operador». Només ho haureu de fer una vegada.</string>
   <!--profile_create_activity-->
   <string name="profile_create_activity__set_later">Estableix-ho més tard</string>
-  <string name="profile_create_activity__finish">ACABA</string>
+  <string name="profile_create_activity__finish">FINALITZA</string>
   <string name="profile_create_activity__who_can_see_this_information">Qui pot veure aquesta informació?</string>
   <string name="profile_create_activity__your_name">El nom</string>
   <!--recipient_preferences_activity-->
@@ -1145,10 +1148,13 @@ S\'ha rebut un missatge d\'intercanvi de claus per a una versió del protocol no
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">El Signal necessita el permís de l\'emmagatzematge extern per tal de crear còpies de seguretat. Si us plau, continueu cap al menú de configuració de l\'aplicació, seleccioneu Permisos i habiliteu-hi l\'emmagatzematge.</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Darrera còpia de seguretat: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">En curs</string>
+  <string name="LocalBackupJob_creating_backup">S\'està creant una còpia de seguretat...</string>
   <string name="ProgressPreference_d_messages_so_far">%d missatges fins ara...</string>
   <string name="RegistrationActivity_verify_s">Verifica %s</string>
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">Si us plau, escriviu el codi de verificació enviat a %s.</string>
   <string name="RegistrationActivity_wrong_number">El número no és correcte?</string>
+  <string name="RegistrationActivity_call_me_instead">Alternativament, anomena\'m</string>
+  <string name="RegistrationActivity_available_in">Disponible en:\u0020</string>
   <string name="BackupUtil_never">Mai</string>
   <string name="BackupUtil_unknown">Desconegut</string>
   <string name="prompt_passphrase_activity__unlock_signal">Desbloca el Signal</string>
