--- a/res/values-th/strings.xml
+++ b/res/values-th/strings.xml
@@ -589,6 +589,9 @@
   <string name="WebRtcCallScreen_new_safety_numbers">ตัวเลขความปลอดภัยของการสนทนาระหว่างคุณกับ %1$s เปลี่ยนไป นี่อาจหมายความว่า มีใครพยายามดักฟังการสื่อสารของคุณ หรือไม่ก็แค่ %2$s ได้ติดตั้งแอป Signal ใหม่</string>
   <string name="WebRtcCallScreen_you_may_wish_to_verify_this_contact">คุณอาจต้องการตรวจยืนยันตัวเลขความปลอดภัยระหว่างคุณกับคนที่คุณติดต่อรายนี้</string>
   <string name="WebRtcCallScreen_new_safety_number_title">ตัวเลขความปลอดภัยใหม่</string>
+  <string name="WebRtcCallScreen_accept">ยอมรับ</string>
+  <string name="WebRtcCallScreen_cancel">ยกเลิก</string>
+  <string name="WebRtcCallScreen_end_call">วางสาย</string>
   <!--WebRtcCallControls-->
   <string name="WebRtcCallControls_tap_to_enable_your_video">แตะเพื่อเปิดใช้วิดีโอของคุณ</string>
   <!--attachment_type_selector-->
