--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -174,6 +174,7 @@
   <string name="ConversationFragment_sms">SMS</string>
   <string name="ConversationFragment_deleting">Cancellazione</string>
   <string name="ConversationFragment_deleting_messages">Cancellazione messaggi...</string>
+  <string name="ConversationFragment_quoted_message_not_found">Messagio citato non trovato</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Sul tuo dispositivo non ci sono browser installati.</string>
   <!--ConversationListFragment-->
@@ -613,6 +614,9 @@ Ricevuto un messaggio di scambio chiavi per una versione di protocollo non valid
   <string name="WebRtcCallScreen_new_safety_numbers">Il codice di sicurezza per le tue conversazioni con %1$s è cambiato. Questo può significare che qualcuno sta provando ad intercettare la tua comunicazione, oppure che %2$s ha semplicemente reinstallato Signal.</string>
   <string name="WebRtcCallScreen_you_may_wish_to_verify_this_contact">Dovresti verificare il codice di sicurezza con questo contatto.</string>
   <string name="WebRtcCallScreen_new_safety_number_title">Nuovo codice di sicurezza</string>
+  <string name="WebRtcCallScreen_accept">Accetta</string>
+  <string name="WebRtcCallScreen_cancel">Annulla</string>
+  <string name="WebRtcCallScreen_end_call">Termina chiamata</string>
   <!--WebRtcCallControls-->
   <string name="WebRtcCallControls_tap_to_enable_your_video">Tocca per abilitare il tuo video</string>
   <!--attachment_type_selector-->
@@ -683,6 +687,8 @@ Ricevuto un messaggio di scambio chiavi per una versione di protocollo non valid
   <!--QuoteView-->
   <string name="QuoteView_audio">Audio</string>
   <string name="QuoteView_video">Video</string>
+  <string name="QuoteView_photo">Foto</string>
+  <string name="QuoteView_document">Documento</string>
   <string name="QuoteView_you">Tu</string>
   <!--conversation_fragment_cab-->
   <string name="conversation_fragment_cab__batch_selection_mode">Modalità di selezione di gruppo</string>
@@ -1142,10 +1148,13 @@ Ricevuto un messaggio di scambio chiavi per una versione di protocollo non valid
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal richiede l\'autorizzazione per creare backup in memoria, ma è stata negata in modo permanente. Si prega di continuare con le impostazioni dell\'app, selezionare \"Autorizzazioni\", quindi abilitare \"Archiviazione\".</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Ultimo backup: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">In corso</string>
+  <string name="LocalBackupJob_creating_backup">Creando il backup...</string>
   <string name="ProgressPreference_d_messages_so_far">Ancora %d messaggi</string>
   <string name="RegistrationActivity_verify_s">Verifica %s</string>
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">Per favore inserire il codice di verifica inviato a %s.</string>
   <string name="RegistrationActivity_wrong_number">Numero errato?</string>
+  <string name="RegistrationActivity_call_me_instead">Chiamami</string>
+  <string name="RegistrationActivity_available_in">Disponibile in:\u0020</string>
   <string name="BackupUtil_never">Mai</string>
   <string name="BackupUtil_unknown">Sconosciuto</string>
   <string name="prompt_passphrase_activity__unlock_signal">Sblocca Signal</string>
@@ -1189,5 +1198,6 @@ Ricevuto un messaggio di scambio chiavi per una versione di protocollo non valid
   <string name="prompt_passphrase_activity__signal_is_locked">Signal è bloccato</string>
   <string name="prompt_passphrase_activity__tap_to_unlock">TAPPA PER SBLOCCARE</string>
   <string name="RegistrationLockDialog_reminder">Promemoria:</string>
+  <string name="recipient_preferences__about">A riguardo</string>
   <!--EOF-->
 </resources>
