--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -49,13 +49,19 @@
   <!--BucketedThreadMedia-->
   <string name="BucketedThreadMedia_Today">오늘</string>
   <string name="BucketedThreadMedia_Yesterday">어제</string>
+  <string name="BucketedThreadMedia_This_week">이번주</string>
+  <string name="BucketedThreadMedia_This_month">이번달</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">수신통화</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">삭제</string>
+  <string name="ClearProfileActivity_remove_profile_photo">프로필 사진을 삭제할까요?</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_accept">수락</string>
   <!--ContactsCursorLoader-->
+  <string name="ContactsCursorLoader_recent_chats">최근 대화</string>
+  <string name="ContactsCursorLoader_contacts">연락처</string>
+  <string name="ContactsCursorLoader_groups">그룹</string>
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">%s에 메시지 보내기</string>
   <string name="ContactsDatabase_signal_call_s">%s에 Signal 통화</string>
@@ -96,13 +102,18 @@
   <string name="ConversationActivity_error_leaving_group">그룹에서 나가기 오류</string>
   <string name="ConversationActivity_specify_recipient">연락처를 선택하세요</string>
   <string name="ConversationActivity_unblock_this_contact_question">사용자를 차단 해제하시겠습니까?</string>
+  <string name="ConversationActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">이 연락처로부터 메시지와 전화를 다시 받을 수 있게 될 것입니다.</string>
   <string name="ConversationActivity_unblock">차단 해제</string>
   <string name="ConversationActivity_attachment_exceeds_size_limits">첨부파일 크기 제한 초과됨</string>
   <string name="ConversationActivity_quick_camera_unavailable">카메라 사용할 수 없음</string>
   <string name="ConversationActivity_unable_to_record_audio">오디오 녹음할 수 없음</string>
   <string name="ConversationActivity_error_sending_voice_message">음성 메시지 보내는 동안 오류 발생</string>
   <string name="ConversationActivity_there_is_no_app_available_to_handle_this_link_on_your_device">작업을 처리할 수 있는 앱 없음</string>
+  <string name="ConversationActivity_to_send_audio_messages_allow_signal_access_to_your_microphone">음성 메시지를 보내기 위해서, Signal 이 마이크에 접근하 수 있게 허용하십시오.</string>
   <!--ConversationAdapter-->
+  <plurals name="ConversationAdapter_n_unread_messages">
+    <item quantity="other">%d 읽지 않은 메시지</item>
+  </plurals>
   <!--ConversationFragment-->
   <plurals name="ConversationFragment_delete_selected_messages">
     <item quantity="other">선택된 메시지를 삭제하시겠습니까?</item>
@@ -133,9 +144,11 @@
   <string name="ConversationFragment_sms">SMS (문자)</string>
   <string name="ConversationFragment_deleting">메시지 삭제</string>
   <string name="ConversationFragment_deleting_messages">메시지를 삭제 중…</string>
+  <string name="ConversationFragment_quoted_message_not_found">인용된 메시지가 발견되지 않음</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">브라우저 앱 없음</string>
   <!--ConversationListFragment-->
+  <string name="ConversationListFragment_no_results_found_for_s_">\'%s\'에 대한 검색결과가 없음</string>
   <plurals name="ConversationListFragment_delete_selected_conversations">
     <item quantity="other">선택된 대화를 삭제하시겠습니까?</item>
   </plurals>
@@ -152,14 +165,21 @@
     <item quantity="other">대화 %d개 보관 취소</item>
   </plurals>
   <!--ConversationListItem-->
+  <string name="ConversationListItem_key_exchange_message">키교환 메시지</string>
   <!--ConversationListItemAction-->
   <string name="ConversationListItemAction_archived_conversations_d">보관된 대화 (%d개)</string>
   <!--CreateProfileActivity-->
+  <string name="CreateProfileActivity_your_profile_info">당신의 프로필 사진</string>
+  <string name="CreateProfileActivity_error_setting_profile_photo">프로필 사진 설정중에 오류</string>
+  <string name="CreateProfileActivity_problem_setting_profile">프로필 설정중에 오류</string>
+  <string name="CreateProfileActivity_profile_photo">프로필 사진</string>
+  <string name="CreateProfileActivity_too_long">너무 깁니다.</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">맞춤값 사용: %s</string>
   <string name="CustomDefaultPreference_using_default">기본값 사용: %s</string>
   <string name="CustomDefaultPreference_none">없음</string>
   <!--DateUtils-->
+  <string name="DateUtils_just_now">지금 당장</string>
   <string name="DateUtils_minutes_ago">%d분 전</string>
   <string name="DateUtils_today">오늘</string>
   <string name="DateUtils_yesterday">어제</string>
@@ -177,6 +197,7 @@
   <string name="DeviceListItem_last_active_s">최근 사용: %s</string>
   <string name="DeviceListItem_today">오늘</string>
   <!--DocumentView-->
+  <string name="DocumentView_unknown_file">알려지지 않은 파일</string>
   <!--DozeReminder-->
   <!--ShareActivity-->
   <string name="ShareActivity_share_with">공유 대상</string>
@@ -186,6 +207,7 @@
   <string name="ExperienceUpgradeActivity_welcome_to_signal_excited">Signal에 오신 것을 환영합니다~!</string>
   <string name="ExperienceUpgradeActivity_textsecure_is_now_signal">이제부터 TextSecure가 Signal로 바뀌었습니다.</string>
   <string name="ExperienceUpgradeActivity_textsecure_is_now_signal_long">이제부터 TextSecure와 RedPhone이 새 앱 Signal로 통합되었습니다. 탐색하려면 터치하세요.</string>
+  <string name="ExperienceUpgradeActivity_say_hello_to_video_calls">영상통화의 보안 모드 전환을 위해서 hello 라고 말해보세요 </string>
   <!--ExportFragment-->
   <string name="ExportFragment_export">내보내기</string>
   <string name="ExportFragment_export_plaintext_to_storage">암호화되지 않은 대화를 저장소로 내보내시겠습니까?</string>
@@ -206,6 +228,7 @@
   <string name="GiphyFragmentPagerAdapter_stickers">스티커</string>
   <!--GroupCreateActivity-->
   <string name="GroupCreateActivity_actionbar_title">그룹 만들기</string>
+  <string name="GroupCreateActivity_actionbar_edit_title">그룹 편집</string>
   <string name="GroupCreateActivity_group_name_hint">그룹 이름</string>
   <string name="GroupCreateActivity_actionbar_mms_title">MMS 그룹 만들기</string>
   <string name="GroupCreateActivity_contacts_dont_support_push">선택된 연락처는 Signal 그룹을 지원하지 않아서 이 그룹은 MMS를 사용하게 됩니다.</string>
@@ -213,12 +236,15 @@
   <string name="GroupCreateActivity_contacts_no_members">그룹 멤버 한명 이상 선택 되어야 함</string>
   <string name="GroupCreateActivity_contacts_invalid_number">그룹 멤버 중 한명은 잘못된 전화번호가 있으므로 정확한 전화번호를 입력하거나 그 연락처를 삭제하고 다시 시도해 주세요.</string>
   <string name="GroupCreateActivity_avatar_content_description">그룹 프로필 사진</string>
+  <string name="GroupCreateActivity_menu_apply_button">적용</string>
   <string name="GroupCreateActivity_creating_group">%1$s을(를) 만드는 중…</string>
   <string name="GroupCreateActivity_updating_group">%1$s을(를) 업데이트 중…</string>
   <string name="GroupCreateActivity_cannot_add_non_push_to_existing_group">%1$s님은 Signal 사용자가 아니어서 추가할 수 없음</string>
   <string name="GroupCreateActivity_loading_group_details">그룹 세부정보를 로드 중…</string>
   <string name="GroupCreateActivity_youre_already_in_the_group">이미 그룹에 참여하는 중</string>
   <!--GroupShareProfileView-->
+  <string name="GroupShareProfileView_share_your_profile_name_and_photo_with_this_group">당신의 프로필의 이름과 사진을 이 그룹과 공유하시겠습니까?</string>
+  <string name="GroupShareProfileView_make_visible">보이게 함</string>
   <!--GroupMembersDialog-->
   <string name="GroupMembersDialog_me">나</string>
   <!--ImportExportActivity-->
@@ -315,6 +341,7 @@
   <string name="RecipientPreferenceActivity_block_this_contact_question">사용자를 차단하시겠습니까?</string>
   <string name="RecipientPreferenceActivity_block">차단</string>
   <string name="RecipientPreferenceActivity_unblock_this_contact_question">사용자를 차단 해제하시겠습니까?</string>
+  <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">이 연락처로부터 메시지와 전화를 다시 받을 수 있게 될 것입니다.</string>
   <string name="RecipientPreferenceActivity_unblock">차단 해제</string>
   <string name="RecipientPreferenceActivity_enabled">사용</string>
   <string name="RecipientPreferenceActivity_disabled">사용 안함</string>
@@ -419,6 +446,9 @@
   <!--VideoPlayer-->
   <!--WebRtcCallActivity-->
   <!--WebRtcCallScreen-->
+  <string name="WebRtcCallScreen_accept">수락</string>
+  <string name="WebRtcCallScreen_cancel">취소</string>
+  <string name="WebRtcCallScreen_end_call">통화 종료</string>
   <!--WebRtcCallControls-->
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">오디오</string>
@@ -726,6 +756,7 @@
   <string name="conversation_unmuted__mute_notifications">알림 끄기</string>
   <!--conversation-->
   <string name="conversation__menu_add_attachment">첨부</string>
+  <string name="conversation__menu_edit_group">그룹 편집</string>
   <string name="conversation__menu_leave_group">그룹 나가기</string>
   <string name="conversation__menu_conversation_settings">대화 설정</string>
   <!--conversation_popup-->
