--- a/res/values-lg/strings.xml
+++ b/res/values-lg/strings.xml
@@ -410,6 +410,9 @@ gy\'olonze (%s) sintuufu.</string>
   <!--VideoPlayer-->
   <!--WebRtcCallActivity-->
   <!--WebRtcCallScreen-->
+  <string name="WebRtcCallScreen_accept">Kiriza</string>
+  <string name="WebRtcCallScreen_cancel">Sazzamu</string>
+  <string name="WebRtcCallScreen_end_call">komya esimu</string>
   <!--WebRtcCallControls-->
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">doboozi</string>
