--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -292,6 +292,9 @@
   <!--VideoPlayer-->
   <!--WebRtcCallActivity-->
   <!--WebRtcCallScreen-->
+  <string name="WebRtcCallScreen_accept">Прифати</string>
+  <string name="WebRtcCallScreen_cancel">Откажи</string>
+  <string name="WebRtcCallScreen_end_call">Заврши го повикот</string>
   <!--WebRtcCallControls-->
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">Звук</string>
