--- a/res/values-ta/strings.xml
+++ b/res/values-ta/strings.xml
@@ -344,6 +344,9 @@
   <!--VideoPlayer-->
   <!--WebRtcCallActivity-->
   <!--WebRtcCallScreen-->
+  <string name="WebRtcCallScreen_accept">ஏற்க</string>
+  <string name="WebRtcCallScreen_cancel">இரத்து</string>
+  <string name="WebRtcCallScreen_end_call">அழைப்பைத் துண்டி</string>
   <!--WebRtcCallControls-->
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">கேள்</string>
