--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -415,6 +415,9 @@ Nhận thông tin trao đổi chìa khóa về phiên bản giao thức không h
   <!--WebRtcCallActivity-->
   <!--WebRtcCallScreen-->
   <string name="WebRtcCallScreen_you_may_wish_to_verify_this_contact">Bạn có thể sẽ cần xác minh mã số an toàn với liên hệ này.</string>
+  <string name="WebRtcCallScreen_accept">Chấp nhận</string>
+  <string name="WebRtcCallScreen_cancel">Hủy bỏ</string>
+  <string name="WebRtcCallScreen_end_call">Ngưng cuộc gọi</string>
   <!--WebRtcCallControls-->
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">Âm thanh</string>
